--- a/about.html
+++ b/about.html
@@ -15,7 +15,8 @@
   <h3> About Us </h3>
   <p2>
     We've all thought about volunteering in our local community, but it's not always clear
-    where to start. Finding a comprehensive directory  When searching for ways to help our local community, we were always met with the same 3
+    where to start. Finding a comprehensive directory of what's available in your area isn't
+    always simple. When searching for ways to help our local community, we were always met with the same 3
     problems:
     <ol>
       <li> Every site was city-specific, we couldn't search multiple areas from the same place.
@@ -27,4 +28,6 @@
         one that you're interested in seemed ironically wasteful of the time of those looking to
         give their time to something meaningful. </li>
       <li> Finally, and probably most importantly, the sites were all BORING! Making the lives
-        of others better is something to be celebrated
+        of others better is something to be celebrated, and that should be reflected in
+        a website's graphics! </li>
+    </ol>    
