--- a/about.html
+++ b/about.html
@@ -4,16 +4,8 @@
 <title> Helping Hand </title>
 </head>
 <body>
-  <h1> Helping Hand </h1>
-  <h2> Streamlining volunteering </h2>
-  <p>
-    We're bringing the British charitable community all into one place, under one site, with one
-    simple objective: to make helping out your local community as easy as possible! Categorised
-    by sector, you can can connect to a variety of groups in need of help, all from a single
-    source.
-  </p>
-  <h3> About Us </h3>
-  <p2>
+  <h1> About Us </h1>
+  <p1>
     We've all thought about volunteering in our local community, but it's not always clear
     where to start. Finding a comprehensive directory of what's available in your area isn't
     always simple. When searching for ways to help our local community, we were always met with the same 3
@@ -30,4 +22,7 @@
       <li> Finally, and probably most importantly, the sites were all BORING! Making the lives
         of others better is something to be celebrated, and that should be reflected in
         a website's graphics! </li>
-    </ol>    
+    </ol>
+  </p1>
+  <p2>
+    That's where Helping Hand comes in! 
