--- a/birmingham.html
+++ b/birmingham.html
@@ -4,5 +4,7 @@
   <title> Birmingham </title>
 </head>
 <body>
-  <h1> Volunteer in Birmingham </h1> 
+  <h1> Volunteer in Birmingham! </h1>
+  <img src = "arts.jpeg" width = "200px">
+  <img src = "conservation.jpg" width = "200px">
 </html>
