--- a/birmingham.html
+++ b/birmingham.html
@@ -5,6 +5,14 @@
 </head>
 <body>
   <h1> Volunteer in Birmingham! </h1>
+  <h2> Arts and Culture </h2>
   <img src = "arts.jpeg" width = "200px">
-  <img src = "conservation.jpg" width = "200px">
+  {justify-content: center;<h2> Conservation </h2>
+    <img src = "conservation.jpg" width = "200px">}
+  <h2> Elderly </h2>
+  <img src = "elderly.jpg" width = "200px">
+  <h2> Mental Health </h2>
+  <img src = "mental health.jpg" width = "200px">
+  <h2> Youth </h2>
+  <img src = "youth.png" width = "200px">
 </html>
