All cities added

--- a/brighton.html
+++ b/brighton.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> Birmingham </title>
+  <title> Brighton </title>
 </head>
 <style>
 body {
@@ -12,7 +12,7 @@ font-family: helvetica;
 }
 </style>
 <body>
-  <h1> Volunteer in Birmingham! </h1>
+  <h1> Volunteer in Brighton! </h1>
 
   <div1>
     <h2> Arts and Culture </h2>
