--- a/index2.html
+++ b/index2.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> Helping Hand </title>
+
+<link rel="stylesheet" type="text/css" href="CSS/styles.css">
+<title> Helping Hands </title>
 </head>
 <body>
-  <h1> Helping Hand </h1>
+  <h1> Helping Hands </h1>
   <h2> Streamlining volunteering </h2>
   <p>
     We're bringing the British charitable community all into one place, under one site, with one
