--- a/index2.html
+++ b/index2.html
@@ -3,11 +3,25 @@
 <head>
 
 <link rel="stylesheet" type="text/css" href="CSS/styles.css">
+
+<div class="flex-container">
+  <img
+src="https://st2.depositphotos.com/1364916/7670/v/950/depositphotos_76706161-stock-illustration-logo-teamwork-hands.jpg"; width="80px"; class="logo">
+    <ul class="navigation">
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Find your city</a></li>
+      <li><a href="#">Contact</a></li>
+  </ul>
+</div>
+
 <title> Helping Hands </title>
 </head>
 <body>
-  <h1> Helping Hands </h1>
-  <h2> Streamlining volunteering </h2>
+
+  <div class="fixed-bg-content">
+          <div class="maintitle">Helping Hands</div>
+          <div class="subtitle">Streamlining volunteering</div>
+        </div>
   <p>
     We're bringing the British charitable community all into one place, under one site, with one
     simple objective: to make helping out your local community as easy as possible! Categorised
