Elderly and Youth Birmingham

--- a/birmingham.html
+++ b/birmingham.html
@@ -6,7 +6,7 @@
 <style>
 body {
 text-align: center;
-background: black;
+background: orange;
 color: white;
 font-family: helvetica;
 }
@@ -26,6 +26,7 @@ font-family: helvetica;
 
   <div3>
     <h2> Elderly </h2>
+    <a href= "elderlybirmingham.html"></a>
     <img src = "elderly.jpg" width = "200px">
   </div3>
 
