--- a/index2.html
+++ b/index2.html
@@ -18,15 +18,13 @@ src="https://st2.depositphotos.com/1364916/7670/v/950/depositphotos_76706161-sto
 </head>
 <body>
 
-  <div class="fixed-bg-content">
-          <div class="maintitle">Helping Hands</div>
-          <div class="subtitle">Streamlining volunteering</div>
-        </div>
-  <p>
-    We're bringing the British charitable community all into one place, under one site, with one
-    simple objective: to make helping out your local community as easy as possible! Categorised
-    by sector, you can can connect to a variety of groups in need of help, all from a single
-    source.
-  </p>
+<div class="transbox-header">
+  <h1><div class="maintitle">Helping Hands</div></h1>
+  <h2><div class="subtitle">We're bringing the British charitable community all into one place, under one site, with one
+  simple objective: to make helping out your local community as easy as possible! Categorised
+  by sector, you can can connect to a variety of groups in need of help, all from a single
+  source.</div></h2>
+</div>
+
 </body>
 </html>
