Made 4 for Birmingham

--- a/elderlybirmingham.html
+++ b/elderlybirmingham.html
@@ -8,11 +8,13 @@ body {
 text-align: left;
 background: orange;
 color: white;
-font-family: helvetica;
+font-family: georgia;
 }
 </style>
 <body>
-  <h1> Help older people in Birmingham </h1>
+  <h1> Help older people in Birmingham! </h1>
+
+  <img src = "independentage.png" width = "200px">
     <h2> Independent Age </h2>
     <p> Independent Age are a charity committed to letting older people live independently
       for as long as possible. Their services include offering friendly contact for elderly
@@ -25,6 +27,7 @@ font-family: helvetica;
     <p> T: 020 7605 4200
     <p> E: charity@independentage.org </p>
 
+  <img src = "contacttheelderly.png" width = "200px">
     <h2> Contact the Elderly </h2>
     <p> Contact the Elderly is a national charity dedicated to tackling loneliness and social
       isolation amongst older people living in the UK. Their main activity is organising free
@@ -36,6 +39,7 @@ font-family: helvetica;
     <p> T: 0800 716543 </p>
     <p> E: tabitha.howes@contact-the-elderly.org.uk </p>
 
+  <img src = "ageUK.jpg" width = "200px">
     <h2> Age UK </h2>
     <p> Age UK are a nationwide organisation offering a huge variety of support to older people,
       including providing information and advice on their rights and options, health and care
@@ -47,4 +51,4 @@ font-family: helvetica;
     <p> T: 0800 678 1602 </p>
     <p> E: info@ageukbirmingham.org.uk </p>
 </body>
-</html> 
+</html>
