--- a/mentalhealthbirmingham.html
+++ b/mentalhealthbirmingham.html
@@ -17,7 +17,11 @@ font-family: georgia;
   <img src = "mindbirmingham.jpg" width = "200px">
     <h2> Mind </h2>
     <p> As the largest voluntary sector provider of mental health services within
-      Birmingham, Mind have a vast amount of experience within the organisation
+      Birmingham, Mind have a vast amount of experience supporting those who need
+      it most. As a volunteer for Mind, responsibilites could include improving service
+      users' self-esteem and confidence by going out with them to shops or local
+      community centres, supporting workers during activity groups, or assisting with
+      administrative tasks. 
     </p>
     <p> W: <a href="https://birminghammind.org/getting-involved/volunteering-for-birmingham-mind/">Volunteer here!</a></p>
     <p> T: 0121 608 8001 </p>
