--- a/refugeesbirmingham.html
+++ b/refugeesbirmingham.html
@@ -22,7 +22,7 @@ font-family: georgia;
       advocacy, and awareness-raising. They are always looking for new befrienders and
       campaigners!
     </p>
-    <p> W: http://www.restore-uk.org/get-involved/ </p>
+    <p> W: <a href="http://www.restore-uk.org/get-involved/">Volunteer here!</a></p>
     <p> T: 0121 661 4275 </p>
 
   <img src = "rmc.png" width = "200px">
@@ -33,7 +33,7 @@ font-family: georgia;
       range of volunteers, including mentors, interpreters, advisors and administrators for
       various projects.
     </p>
-    <p> W: https://rmcentre.org.uk/volunteer/ </p>
+    <p> W: <a href="https://rmcentre.org.uk/volunteer/">Volunteer here!</a></p>
     <p> T: 01902 311554 </p>
     <p> E: info@rmcentre.org.uk </p>
 
@@ -44,7 +44,7 @@ font-family: georgia;
       support. You can get directly invloved with those in need of help by welcoming new
       arrivals, acting as an interpreter, teaching English and employability skills, or
       just generally supporting them. </p>
-    <p> W: https://www.refugee-action.org.uk/support-us/volunteers/ </p>
+    <p> W: <a href="https://www.refugee-action.org.uk/support-us/volunteers/">Volunteer here!</a></p>
     <p> T: 0121 201 3070 </p>
     <p> E: info@refugee-action.org.uk </p>
 </body>
