Mental health pic

--- a/mentalhealthbirmingham.html
+++ b/mentalhealthbirmingham.html
@@ -21,26 +21,25 @@ font-family: georgia;
       it most. As a volunteer for Mind, responsibilites could include improving service
       users' self-esteem and confidence by going out with them to shops or local
       community centres, supporting workers during activity groups, or assisting with
-      administrative tasks. 
+      administrative tasks.
     </p>
     <p> W: <a href="https://birminghammind.org/getting-involved/volunteering-for-birmingham-mind/">Volunteer here!</a></p>
     <p> T: 0121 608 8001 </p>
     <p> E: </p>
 
-  <img src = "" width = "200px">
-    <h2> </h2>
-    <p>
-        </p>
-    <p> W: </p>
-    <p> T: </p>
-    <p> E: </p>
-
-  <img src = "" width = "200px">
-    <h2> </h2>
-    <p>
+  <img src = "bsmhft.gif" width = "200px">
+    <h2>Birmingham and Solihull Mental Health NHS Foundation Trust </h2>
+    <p> It's estimated that one in four people in the UK will experience a mental health problem
+       in their lifetime and this Trust was established to help those people, their families and
+      carers. BSMHFT are dedicated to raising awareness of mental health and removing the stigma
+      that’s associated with it. Volunteers here have a range of roles which may include
+      facilitating art sessions, playing music on wards, meeting and greeting people attending
+      clinics, supporting patients to complete satisfaction surveys, helping service users learn
+      computer skills, to visiting inpatients or activity helper type roles assisting service
+      users with ward-based recreational activities.
     </p>
-    <p> W: </p>
-    <p> T: </p>
-    <p> E: </p>
+    <p> W: <a href="https://www.bsmhft.nhs.uk/about-us/join-us/become-a-volunteer/">Volunteer here!</a></p>
+    <p> T: 0800 953 0045 </p>
+    <p> E: bsmhft.customerrelations@nhs.net </p>
 </body>
 </html>
