Funcking about us link

--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
   <img
 src="https://st2.depositphotos.com/1364916/7670/v/950/depositphotos_76706161-stock-illustration-logo-teamwork-hands.jpg"; width="80px"; class="logo">
     <ul class="navigation">
-      <li><a href="#">About Us</a></li>
+      <li><a href="about.html">About Us</a></li>
       <li><a href="#">Find your city</a></li>
       <li><a href="#">Contact</a></li>
   </ul>
