--- a/birmingham.html
+++ b/birmingham.html
@@ -15,33 +15,32 @@ font-family: georgia;
   <h1> Volunteer in Birmingham! </h1>
 
   <div1>
-    <h2> Arts and Culture </h2>
+    <a href="artsandculturebirmingham.html"><h2> Arts and Culture </h2></a>
     <img src = "arts.jpeg" width = "200px">
   </div1>
 
   <div2>
-    <h2> Conservation </h2>
+    <a href="conservationbirmingham.html"><h2> Conservation </h2></a>
     <img src = "conservation.jpg" width = "200px">
   </div2>
 
   <div3>
-    <h2> Elderly </h2>
-    <a href= "elderlybirmingham.html"></a>
+    <a href= "elderlybirmingham.html"><h2> Elderly </h2></a>
     <img src = "elderly.jpg" width = "200px">
   </div3>
 
   <div4>
-    <h2> Mental Health </h2>
+    <a href="mentalhealthbirmingham.html"><h2>Mental Health</h2></a>
     <img src = "mental health.jpg" width = "200px">
   </div4>
 
   <div5>
-    <h2> Youth </h2>
+    <a href="youthbirmingham.html"><h2>Youth</h2></a>
     <img src = "youth.png" width = "200px">
   </div5>
 
   <div6>
-    <h2> Refugees </h2>
+    <a href="refugeesbirmingham.html"><h2>Refugees</h2></a>
     <img src = "refugees.jpg" width = "200px">
   </div6>
 
