--- a/about.html
+++ b/about.html
@@ -1,28 +1,63 @@
 <!DOCTYPE html>
 <html>
+
+<link rel="stylesheet" type="text/css" href="CSS/styles.css">
+
 <head>
 <title> Helping Hand </title>
 </head>
-<body>
-  <h1> About Us </h1>
-  <p1>
-    We've all thought about volunteering in our local community, but it's not always clear
-    where to start. Finding a comprehensive directory of what's available in your area isn't
-    always simple. When searching for ways to help our local community, we were always met with the same 3
-    problems:
-    <ol>
-      <li> Every site was city-specific, we couldn't search multiple areas from the same place.
-        Like many of our student counterparts, we had two homes (one term-time and another
-        during holidays), so finding ways to help in both was essential. </li>
-      <li> Several of the volunteering websites we came across followed an alphabetised system
-        of ordering local charities. This is great if you're licenser or researcher, but not so
-        great if you're actually looking to help out. Having to trawl through every name to find
-        one that you're interested in seemed ironically wasteful of the time of those looking to
-        give their time to something meaningful. </li>
-      <li> Finally, and probably most importantly, the sites were all BORING! Making the lives
-        of others better is something to be celebrated, and that should be reflected in
-        a website's graphics! </li>
-    </ol>
-  </p1>
-  <p2>
-    
+
+<body id="page2">
+  <div class="myDiv">
+
+    <div class="flex-container">
+      <img
+    src="https://st2.depositphotos.com/1364916/7670/v/950/depositphotos_76706161-stock-illustration-logo-teamwork-hands.jpg"; width="80px"; class="logo">
+        <ul class="navigation">
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="map.html">Find your city</a></li>
+          <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+<h1>About Us</h1>
+
+<br>
+
+    <p1>
+      We've all thought about volunteering in our local community, but it's not always clear
+      where to start. Finding a comprehensive directory of what's available in your area isn't
+      always simple. When searching for ways to help our local community, we were always met with the same 3
+      problems:
+      <ol>
+
+        <br>
+
+        <li> Every site was city-specific, we couldn't search multiple areas from the same place.
+          Like many of our student counterparts, we had two homes (one term-time and another
+          during holidays), so finding ways to help in both was essential. </li>
+
+          <br>
+
+        <li> Several of the volunteering websites we came across followed an alphabetised system
+          of ordering local charities. This is great if you're licenser or researcher, but not so
+          great if you're actually looking to help out. Having to trawl through every name to find
+          one that you're interested in seemed ironically wasteful of the time of those looking to
+          give their time to something meaningful. </li>
+
+          <br>
+
+        <li> Finally, and probably most importantly, the sites were all BORING! Making the lives
+          of others better is something to be celebrated, and that should be reflected in
+          a website's graphics! </li>
+
+          <br>
+
+      </ol>
+    </p1>
+    <p2>
+      That's where Helping Hand comes in!
+
+      <br>
+    </div>
+  </body>
+</html>
