--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<html class="home-bg">
 <head>
 
 <link rel="stylesheet" type="text/css" href="CSS/styles.css">
@@ -9,14 +10,15 @@
 src="https://st2.depositphotos.com/1364916/7670/v/950/depositphotos_76706161-stock-illustration-logo-teamwork-hands.jpg"; width="80px"; class="logo">
     <ul class="navigation">
       <li><a href="about.html">About Us</a></li>
-      <li><a href="#">Find your city</a></li>
+      <li><a href="map.html">Find your city</a></li>
       <li><a href="#">Contact</a></li>
   </ul>
 </div>
 
 <title> Helping Hands </title>
 </head>
-<body>
+<body id="page1">
+  <div class="myDiv">My Text</div>
 
 <div class="transbox-header">
   <h1><div class="maintitle">Helping Hands</div></h1>
