--- a/birmingham.html
+++ b/birmingham.html
@@ -10,6 +10,10 @@ background: orange;
 color: white;
 font-family: georgia;
 }
+img {
+  border-radius: 50%;
+}
+
 </style>
 <body>
   <h1> Volunteer in Birmingham! </h1>
