--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         <ul class="navigation">
           <li><a href="about.html">About Us</a></li>
           <li><a href="map.html">Find your city</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
 <h1>About Us</h1>
