--- a/index2.html
+++ b/index2.html
@@ -11,14 +11,15 @@ src="https://st2.depositphotos.com/1364916/7670/v/950/depositphotos_76706161-sto
     <ul class="navigation">
       <li><a href="about.html">About Us</a></li>
       <li><a href="map.html">Find your city</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="contact.html">Contact</a></li>
   </ul>
 </div>
 
 <title> Helping Hands </title>
 </head>
 <body id="page1">
-  <div class="myDiv">My Text</div>
+  <div class="myDiv">
+    </div>
 
 <div class="transbox-header">
   <h1><div class="maintitle">Helping Hands</div></h1>
