--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,13 @@ src="https://st2.depositphotos.com/1364916/7670/v/950/depositphotos_76706161-sto
 
 <h1>Get in touch!</h1>
 
+<br>
 
+<p> Email: aloe@gmail.com </p>
+
+<br>
+
+<p> Phone: 07937469667 </p>
 
 </body>
 </html>
