--- a/map.html
+++ b/map.html
@@ -14,4 +14,5 @@ font-family: georgia;
 <body>
 <h1> Find your city </h1>
 <iframe width="768" height="576" src="https://maphub.net/embed/52845?panel=1" frameborder="0"></iframe>
+</body>
 </html>
