--- a/birmingham.html
+++ b/birmingham.html
@@ -57,5 +57,5 @@ src="https://st2.depositphotos.com/1364916/7670/v/950/depositphotos_76706161-sto
     <a href="refugeesbirmingham.html"><h2>Refugees</h2></a>
     <img src = "refugees.jpg" width = "200px">
   </div6>
-
+  </body>
 </html>
